--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
-project(torchsplineconv)
+project(compactspline)
 set(CMAKE_CXX_STANDARD 14)
-set(TORCHSPLINECONV_VERSION 1.2.2)
+set(COMPACTSPLINE_VERSION 1.2.2)
 
 option(WITH_CUDA "Enable CUDA support" OFF)
 
@@ -15,7 +15,7 @@ endif()
 find_package(Python3 COMPONENTS Development)
 find_package(Torch REQUIRED)
 
-file(GLOB HEADERS csrc/spline_conv.h)
+file(GLOB HEADERS csrc/spline_conv_mod.h)
 file(GLOB OPERATOR_SOURCES csrc/cpu/*.h csrc/cpu/*.cpp csrc/*.cpp)
 if(WITH_CUDA)
   file(GLOB OPERATOR_SOURCES ${OPERATOR_SOURCES} csrc/cuda/*.h csrc/cuda/*.cu)
@@ -23,7 +23,7 @@ endif()
 
 add_library(${PROJECT_NAME} SHARED ${OPERATOR_SOURCES})
 target_link_libraries(${PROJECT_NAME} PRIVATE ${TORCH_LIBRARIES} Python3::Python)
-set_target_properties(${PROJECT_NAME} PROPERTIES EXPORT_NAME TorchSplineConv)
+set_target_properties(${PROJECT_NAME} PROPERTIES EXPORT_NAME CompactSpline)
 
 target_include_directories(${PROJECT_NAME} INTERFACE
   $<BUILD_INTERFACE:${HEADERS}>
@@ -32,38 +32,40 @@ target_include_directories(${PROJECT_NAME} INTERFACE
 include(GNUInstallDirs)
 include(CMakePackageConfigHelpers)
 
-set(TORCHSPLINECONV_CMAKECONFIG_INSTALL_DIR "share/cmake/TorchSplineConv" CACHE STRING "install path for TorchSplineConvConfig.cmake")
+set(COMPACTSPLINE_CMAKECONFIG_INSTALL_DIR "share/cmake/CompactSpline" CACHE STRING "install path for CompactSplineConfig.cmake")
 
-configure_package_config_file(cmake/TorchSplineConvConfig.cmake.in
-  "${CMAKE_CURRENT_BINARY_DIR}/TorchSplineConvConfig.cmake"
-  INSTALL_DESTINATION ${TORCHSPLINECONV_CMAKECONFIG_INSTALL_DIR})
+configure_package_config_file(cmake/CompactSplineConfig.cmake.in
+  "${CMAKE_CURRENT_BINARY_DIR}/CompactSplineConfig.cmake"
+  INSTALL_DESTINATION ${COMPACTSPLINE_CMAKECONFIG_INSTALL_DIR})
 
-write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/TorchSplineConvConfigVersion.cmake
-  VERSION ${TORCHSPLINECONV_VERSION}
+write_basic_package_version_file(${CMAKE_CURRENT_BINARY_DIR}/CompactSplineConfigVersion.cmake
+  VERSION ${COMPACTSPLINE_VERSION}
   COMPATIBILITY AnyNewerVersion)
 
-install(FILES ${CMAKE_CURRENT_BINARY_DIR}/TorchSplineConvConfig.cmake
-  ${CMAKE_CURRENT_BINARY_DIR}/TorchSplineConvConfigVersion.cmake
-  DESTINATION ${TORCHSPLINECONV_CMAKECONFIG_INSTALL_DIR})
+install(FILES ${CMAKE_CURRENT_BINARY_DIR}/CompactSplineConfig.cmake
+  ${CMAKE_CURRENT_BINARY_DIR}/CompactSplineConfigVersion.cmake
+  DESTINATION ${COMPACTSPLINE_CMAKECONFIG_INSTALL_DIR})
 
 install(TARGETS ${PROJECT_NAME}
-  EXPORT TorchSplineConvTargets
+  EXPORT CompactSplineTargets
   LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
   )
 
-install(EXPORT TorchSplineConvTargets
-  NAMESPACE TorchSplineConv::
-  DESTINATION ${TORCHSPLINECONV_CMAKECONFIG_INSTALL_DIR})
+install(EXPORT CompactSplineTargets
+  NAMESPACE CompactSpline::
+  DESTINATION ${COMPACTSPLINE_CMAKECONFIG_INSTALL_DIR})
 
 install(FILES ${HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME})
 install(FILES
   csrc/cpu/basis_cpu.h
-  csrc/cpu/weighting_cpu.h
+  csrc/cpu/weighting_mod_cpu.h
   DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/cpu)
 if(WITH_CUDA)
   install(FILES
     csrc/cuda/basis_cuda.h
-    csrc/cuda/weighting_cuda.h
+    csrc/cuda/multispline_basis_cuda.h
+    csrc/cuda/multispline_fused_cuda.h
+    csrc/cuda/weighting_mod_cuda.h
     DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/${PROJECT_NAME}/cuda)
 endif()
 
