--- a/.github/workflows/building.yml
+++ b/.github/workflows/building.yml
@@ -60,12 +60,12 @@ jobs:
       - name: Set version
         if: ${{ runner.os != 'macOS' }}
         run: |
-          VERSION=`sed -n "s/^__version__ = '\(.*\)'/\1/p" torch_spline_conv/__init__.py`
+          VERSION=`sed -n "s/^__version__ = '\(.*\)'/\1/p" torch_spline_conv_EKM/__init__.py`
           TORCH_VERSION=`echo "pt${{ matrix.torch-version }}" | sed "s/..$//" | sed "s/\.//g"`
           CUDA_VERSION=`echo ${{ matrix.cuda-version }}`
           echo "New version name: $VERSION+$TORCH_VERSION$CUDA_VERSION"
           sed -i "s/$VERSION/$VERSION+$TORCH_VERSION$CUDA_VERSION/" setup.py
-          sed -i "s/$VERSION/$VERSION+$TORCH_VERSION$CUDA_VERSION/" torch_spline_conv/__init__.py
+          sed -i "s/$VERSION/$VERSION+$TORCH_VERSION$CUDA_VERSION/" torch_spline_conv_EKM/__init__.py
         shell:
           bash
 
@@ -86,7 +86,7 @@ jobs:
 
       - name: Test installation
         run: |
-          python -c "import torch_spline_conv; print('torch-spline-conv:', torch_spline_conv.__version__)"
+          python -c "import torch_spline_conv_EKM; print('torch-spline-conv:', torch_spline_conv_EKM.__version__)"
 
       - name: Build wheel
         run: |
